* Put some data on Home

--- a/lib/localization/app_vi.arb
+++ b/lib/localization/app_vi.arb
@@ -281,7 +281,7 @@
   "@guest": {},
   "home": "Trang chủ",
   "@home": {},
-  "homeGreet": "Hi There,",
+  "homeGreet": "Xin chào,",
   "@homeGreet": {},
   "importFile": "Import from File",
   "@importFile": {},
