--- a/lib/localization/app_vi.arb
+++ b/lib/localization/app_vi.arb
@@ -155,7 +155,7 @@
   "@createYtFoldSub": {},
   "currentTheme": "Current Theme",
   "@currentTheme": {},
-  "darkMode": "Dark Mode",
+  "darkMode": "Chế độ tối",
   "@darkMode": {},
   "date": "Date",
   "@date": {},
@@ -317,11 +317,11 @@
   "@joinTg": {},
   "joinTgSub": "Want to Test beta versions? Join us now!",
   "@joinTgSub": {},
-  "lang": "Language",
+  "lang": "Ngôn ngữ",
   "@lang": {},
   "langQue": "Which language songs would you prefer to listen to?",
   "@langQue": {},
-  "langSub": "App Text Language",
+  "langSub": "Ngôn ngữ ứng dụng",
   "@langSub": {},
   "lastAdded": "Last Added",
   "@lastAdded": {},
